Favicon and meta

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="Анкеты для знакомств chubby thread.">
+    <link rel="shortcut icon" type="image/png" href="/static/favicon.ico"/>
     <link rel="stylesheet" type="text/css" href="/static/bootstrap.min.css">
-    <title>chbthread</title>
+    <title>Chubby thread</title>
   </head>
   <body>
     <div id="app"></div>
